VariationHandling/JES_files/2016_preVFP/Histo_1000_TTToSemiLeptonic_boostedSmearedUp.err
[8MB/2.255GB][  0%][>                                                 ][4MB/s]  [16MB/2.255GB][  0%][>                                                 ][5.333MB/s]  [64MB/2.255GB][  2%][=>                                                ][16MB/s]  [112MB/2.255GB][  4%][==>                                               ][22.4MB/s]  [160MB/2.255GB][  6%][===>                                              ][26.67MB/s]  [216MB/2.255GB][  9%][====>                                             ][30.86MB/s]  [272MB/2.255GB][ 11%][=====>                                            ][34MB/s]  [312MB/2.255GB][ 13%][======>                                           ][34.67MB/s]  [352MB/2.255GB][ 15%][=======>                                          ][35.2MB/s]  [400MB/2.255GB][ 17%][========>                                         ][36.36MB/s]  [448MB/2.255GB][ 19%][=========>                                        ][37.33MB/s]  [496MB/2.255GB][ 21%][==========>                                       ][38.15MB/s]  [544MB/2.255GB][ 23%][===========>                                      ][38.86MB/s]  [592MB/2.255GB][ 25%][============>                                     ][39.47MB/s]  [640MB/2.255GB][ 27%][=============>                                    ][40MB/s]  [696MB/2.255GB][ 30%][===============>                                  ][40.94MB/s]  [744MB/2.255GB][ 32%][================>                                 ][41.33MB/s]  [792MB/2.255GB][ 34%][=================>                                ][41.68MB/s]  [840MB/2.255GB][ 36%][==================>                               ][42MB/s]  [888MB/2.255GB][ 38%][===================>                              ][42.29MB/s]  [936MB/2.255GB][ 40%][====================>                             ][42.55MB/s]  [992MB/2.255GB][ 42%][=====================>                            ][43.13MB/s]  [1.008GB/2.255GB][ 44%][======================>                           ][43MB/s]  [1.062GB/2.255GB][ 47%][=======================>                          ][43.52MB/s]  [1.109GB/2.255GB][ 49%][========================>                         ][43.69MB/s]  [1.164GB/2.255GB][ 51%][=========================>                        ][44.15MB/s]  [1.227GB/2.255GB][ 54%][===========================>                      ][44.86MB/s]  [1.281GB/2.255GB][ 56%][============================>                     ][45.24MB/s]  [1.336GB/2.255GB][ 59%][=============================>                    ][45.6MB/s]  [1.391GB/2.255GB][ 61%][==============================>                   ][45.94MB/s]  [1.438GB/2.255GB][ 63%][===============================>                  ][46MB/s]  [1.492GB/2.255GB][ 66%][=================================>                ][46.3MB/s]  [1.539GB/2.255GB][ 68%][==================================>               ][46.35MB/s]  [1.594GB/2.255GB][ 70%][===================================>              ][46.63MB/s]  [1.609GB/2.255GB][ 71%][===================================>              ][45.78MB/s]  [1.633GB/2.255GB][ 72%][====================================>             ][45.19MB/s]  [1.648GB/2.255GB][ 73%][====================================>             ][44.42MB/s]  [1.672GB/2.255GB][ 74%][=====================================>            ][43.9MB/s]  [1.688GB/2.255GB][ 74%][=====================================>            ][43.2MB/s]  [1.711GB/2.255GB][ 75%][=====================================>            ][42.73MB/s]  [1.734GB/2.255GB][ 76%][======================================>           ][42.29MB/s]  [1.758GB/2.255GB][ 77%][======================================>           ][41.86MB/s]  [1.789GB/2.255GB][ 79%][=======================================>          ][41.64MB/s]  [1.82GB/2.255GB][ 80%][========================================>         ][41.42MB/s]  [1.852GB/2.255GB][ 82%][=========================================>        ][41.22MB/s]  [1.883GB/2.255GB][ 83%][=========================================>        ][41.02MB/s]  [1.93GB/2.255GB][ 85%][==========================================>       ][41.17MB/s]  [1.977GB/2.255GB][ 87%][===========================================>      ][41.31MB/s]  [2.023GB/2.255GB][ 89%][============================================>     ][41.44MB/s]  [2.086GB/2.255GB][ 92%][==============================================>   ][41.88MB/s]  [2.141GB/2.255GB][ 94%][===============================================>  ][42.15MB/s]  [2.195GB/2.255GB][ 97%][================================================> ][42.42MB/s]  [2.255GB/2.255GB][100%][==================================================][42.77MB/s]  [2.255GB/2.255GB][100%][==================================================][42.77MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_2261/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_2261/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
